--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -14,7 +15,9 @@
             android:id="@+id/video_player"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            custom:shader="green"
+            custom:accuracy="0.1"/>
     </FrameLayout>
 
     <LinearLayout
@@ -22,25 +25,31 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
-        <Button
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@drawable/button_play"
             android:text="play"
-            android:onClick="play"/>
-        <Button
+            android:onClick="play"
+            android:padding="20dip"/>
+
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@drawable/button_pause"
             android:text="pause"
-            android:onClick="pause"/>
-        <Button
+            android:onClick="pause"
+            android:padding="20dip"/>
+
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@drawable/button_stop"
             android:text="stop"
-            android:onClick="stop"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="addNew"
-            android:onClick="addNew"/>
+            android:onClick="stop"
+            android:padding="20dip"/>
     </LinearLayout>
 </LinearLayout>
