--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -7,9 +7,10 @@
     android:orientation="vertical">
 
     <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="270dip"
-        android:background="@drawable/court">
+        android:background="@drawable/court_blue">
 
         <com.alphamovie.lib.AlphaMovieView
             android:id="@+id/video_player"
@@ -52,4 +53,19 @@
             android:onClick="stop"
             android:padding="20dip"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="5dip">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/change_bg"
+            android:textColor="@android:color/white"
+            android:background="@drawable/button_background"
+            android:onClick="changeBackground"/>
+    </LinearLayout>
+
 </LinearLayout>
