--- a/example/src/main/res/drawable/button_background.xml
+++ b/example/src/main/res/drawable/button_background.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <corners android:radius="10dip" />
+    <corners android:radius="@dimen/button_bg_radius" />
     <solid android:color="@android:color/black" />
-    <padding android:left="20dip" android:right="20dip" />
+    <padding android:left="@dimen/button_bg_padding_horizontal"
+        android:right="@dimen/button_bg_padding_horizontal"
+        android:bottom="@dimen/button_bg_padding_vertical"
+        android:top="@dimen/button_bg_padding_vertical" />
 </shape>
