--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -37,8 +37,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            custom:shader="green"
-            custom:accuracy="0.1"/>
+            custom:alphaColor="#00ff00"
+            custom:accuracy="0.4"/>
     </FrameLayout>
 
     <LinearLayout
